css/style.css
/* ... */
.hr {
  background: #8C1515;
}
.carousel-fade .carousel-inner .item {
  max-width: 100%;
  max-height: 100%;
  overflow: hidden;
  left: 0;
  opacity: 0;
  -webkit-transition-property: all;
  -moz-transition-property: all;
  -ms-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.6s;
  -moz-transition-duration: 0.6s;
  -ms-transition-duration: 0.6s;
  transition-duration: 0.6s;
  -webkit-transition-timing-function: ease-in;
  -moz-transition-timing-function: ease-in;
  -ms-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}
.carousel-fade .carousel-inner .item > img {
  left: 0;
  position: relative;
  max-width: 1000000000%;
}
.carousel-fade .carousel-inner .active {
  left: 0;
  opacity: 1;
  -webkit-transition-property: all;
  -moz-transition-property: all;
  -ms-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.6s;
  -moz-transition-duration: 0.6s;
  -ms-transition-duration: 0.6s;
  transition-duration: 0.6s;
  -webkit-transition-timing-function: ease-out;
  -moz-transition-timing-function: ease-out;
  -ms-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}
.carousel-fade .carousel-inner .active.left,
.carousel-fade .carousel-inner .active.right {
  left: 0;
  opacity: 1;
}
.carousel-fade .carousel-inner .next.left,
.carousel-fade .carousel-inner .prev.right {
  left: 0;
  opacity: 1;
}
.carousel {
  position: absolute;
  max-width: 100%;
  max-height: 100%;
  overflow: hidden;
}
.carousel-inner {
  max-width: 100%;
  max-height: 100%;
  overflow: hidden;
}
.glyphicon-chevron-left:before {
  content: "" !important;
}
.glyphicon-chevron-right:before {
  content: "" !important;
}
@media all and (transform-3d), (-webkit-transform-3d) {
  .carousel-fade .carousel-inner > .item.next,
  .carousel-fade .carousel-inner > .item.active.right {
    left: 0;
    opacity: 0;
    -webkit-transform: translate3d(0, 0, 0);
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
  .carousel-fade .carousel-inner > .item.prev,
  .carousel-fade .carousel-inner > .item.active.left {
    left: 0;
    opacity: 0;
    -webkit-transform: translate3d(0, 0, 0);
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
  .carousel-fade .carousel-inner > .item.next.left,
  .carousel-fade .carousel-inner > .item.prev.right,
  .carousel-fade .carousel-inner > .item.active {
    left: 0;
    opacity: 1;
    -webkit-transform: translate3d(0, 0, 0);
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }
}
.navbar-nav>li>a:hover,
.navbar-nav>li>a:focus {
  border-bottom: 5px solid #414141;
  color: #414141 !important;
}
.navbar-inner {
  min-height: 90px;
  -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
  box-shadow: 0 0 5px rgba(0,0,0,0.1);
  border-top: 2px solid #414141;
}
.brand {
  float: left;
  display: block;
  position: absolute;
  z-index: 1500;
  font-size: 20px;
  font-weight: 200;
  color: #555;
  border-style: solid;
  border-color: rgba(24,24,21,0.07);
  border-width: 0 8px 8px 8px;
}
@media screen and (max-width: 479px) {
  .brand {
    display: inline;
    margin-left: -70px;
    left: 50%;
  }
}
.brand p {
  margin: 0;
  padding: 0 20px 0 20px;
  color: #1d1d1b;
  height: 88px;
  line-height: 86px;
  text-transform: capitalize;
  font-family: 'TeX Gyre Pagella', 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
  font-weight: bold;
  font-size: 27px;
  letter-spacing: 0.2px;
}
.brand p:first-letter {
  font-size: 160%;
  background: #000;
  color: #fff;
  padding: 0 0.2em 0 0.2em;
  margin: 0 3px 0 0;
}
#search-form-wrap {
  height: 50px;
}
#search-form-wrap .search-form {
  position: relative;
  height: 100%;
}
#search-form-wrap .search-form .search-form-input {
  padding: 0 30px 0 15px;
  height: 100% !important;
}
#search-form-wrap .search-form .search-form-input::-webkit-search-results-decoration,
#search-form-wrap .search-form .search-form-input::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
#search-form-wrap .search-form .search-form-submit {
  top: 50%;
  right: 10px;
  border: none;
  background: none;
  cursor: pointer;
  margin-top: -12px;
  position: absolute;
  font-family: 'FontAwesome';
}
#search-form-wrap .search-form .search-form-submit:before {
  color: #555;
  content: '\f002';
}
@media screen and (max-width: 479px) {
  #search-form-wrap .search-form .search-form-submit:before {
    color: #fff;
  }
}
#search-form-wrap .search-form .search-form-submit:hover,
#search-form-wrap .search-form .search-form-submit:focus {
  color: #414141;
}
.search-form-input,
.search-form-input.ins-search-input,
.search-form-input.st-ui-search-input,
.search-form-input.st-default-search-input {
  -webkit-appearance: textarea;
  -webkit-appearance: textarea;
  -moz-appearance: textarea;
  appearance: textarea;
  padding: 0;
  width: 45px;
  -webkit-box-shadow: none;
  box-shadow: none;
  color: #444;
  -webkit-transition: 0.2s ease;
  -moz-transition: 0.2s ease;
  -ms-transition: 0.2s ease;
  transition: 0.2s ease;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  height: auto !important;
  line-height: 1.6em;
  outline: none !important;
  background: none !important;
  font-size: 14px;
  font-family: 'TeX Gyre Pagella', 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
  border: 0px;
}
.search-form-input:focus,
.search-form-input.ins-search-input:focus,
.search-form-input.st-ui-search-input:focus,
.search-form-input.st-default-search-input:focus {
  border-color: #0e83cd !important;
}
/* ... */

